# Voting_System

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  2026-05-29-215621-system-reminder.txt  2026-06-02-192918-command-messagevoting-test-featurecommand-mes.txt  2026-06-03-042506-httpswwwfigmacommake45lts0ln1l9erdq99h1gdf.txt  2026-06-03-133815-http1270018000profile-fix-ui-issues-e.txt  AGENTS.md  Dockerfile  Makefile  README.md  app.py  claude.md  config.py  db_check.py  db_check_elections.py  deploement_check.md  docker-compose.test.yml  docker-compose.yml  exceptions.py  improvements.txt  middleware.py  phase-3.md  pyproject.toml  requirements.txt  seedchat 27-night.txt  session.md  ship-feature.md  worker.bat  worker.py
.claude/: settings.local.json
.codex/: config.toml  settings.local.json
.opencode/: opencode.json
alembic/: env.py
database/: add_indexes.sql  connection.py  create_admin.py  migrate_profile.py  schema.sql  seed.py  setup_profiles.py
docs/: conventions.md  conversations.md  database.md  project-overview.md
jobs/: export_job.py
schemas/: candidate.py  election.py  user.py  vote.py
services/: audit_service.py  auth_service.py  breach_service.py  cache_service.py  candidate_service.py  election_service.py  export_service.py  file_service.py  task_service.py  user_service.py  vote_service.py
templates/: admin-login.html  admin_audit.html  admin_candidates_approved.html  admin_candidates_list.html  admin_candidates_pending.html  admin_dashboard.html  admin_election_candidates.html  admin_election_create.html  (+19 more)
(+89 files in other folders)
