[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voting-system"
version = "1.0.0"
description = "Web-based election management platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "jinja2>=3.1.6",
    "mysql-connector-python>=9.7.0",
    "pyjwt>=2.12.0",
    "werkzeug>=3.1.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.28",
    "pydantic>=2.13.0",
    "starlette>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "black>=25.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
